[package]
name = "fs-sync"
version = "0.1.0"
authors = ["David Barsky <me@davidbarsky.com>"]

[dependencies]
notify = "4.0.0"
loggerv = "0.4"
log = "0.3"
error-chain = "0.11.0"
derive-error-chain = "0.11.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"
ssh2 = "0.3"
clippy = {version = "*", optional = true}
difference = "1.0"
walkdir = "2"

[features]
default = []